# pos-receipt-printer

./: .gitignore  Cargo.toml  PRE_RELEASE_CHECKLIST.md  QUICK_REFERENCE.md  README.md  RELEASE.md  SETUP_COMPLETE.md  index.d.ts  index.js  index.node  opencode.json  package.json  pnpm-lock.yaml  test-uuid.js  verify-setup.js
.github/workflows/: release.yml
examples/: usage.ts
lib/: index.js
scripts/: download-binary.js
src/: lib.rs  types.rs
src/renderer/: barcode.rs  divider.rs  image_render.rs  mod.rs  qr.rs  table.rs  text.rs
