[package]
name = "pos-receipt-printer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["tokio_rt"] }
napi-derive = "2"
escpos = { git = "https://github.com/fabienbellanger/escpos-rs", rev = "78a6302", features = ["full"] }
serialport = "4.7"
image = "0.24"
imageproc = "0.23"
ab_glyph = "0.2"
ar-reshaper = "1.5"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
napi-build = "2"

[profile.release]
opt-level = 3
lto = "thin"
